--- a/arch/arm/configs/hammerhead_defconfig
+++ b/arch/arm/configs/hammerhead_defconfig
@@ -102,6 +102,7 @@ CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
+CONFIG_SCHED_HMP=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
@@ -689,6 +690,7 @@ CONFIG_CMDLINE=""
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
+# CONFIG_SCHED_FREQ_INPUT is not set
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -1386,6 +1388,7 @@ CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_CRYPT=y
+# CONFIG_DM_REQ_CRYPT is not set
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
 # CONFIG_DM_MIRROR is not set
@@ -2477,6 +2480,7 @@ CONFIG_FB_MSM_LVDS_CHIMEI_WXGA_PANEL=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334 is not set
+# CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_LCD_KCAL=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -3030,6 +3034,7 @@ CONFIG_QPNP_CLKDIV=y
 CONFIG_QPNP_REVID=y
 CONFIG_QPNP_COINCELL=y
 # CONFIG_IPA is not set
+# CONFIG_PFT is not set
 # CONFIG_SSM is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -3226,6 +3231,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_SCHED_DEBUG is not set
+# CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
